# simple-django-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  manage.py  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: handlers.py  schemas.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/apps/products/services/: products.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: backend.yaml  database.yaml
project/project/: settings.py
tests/services/: test_products.py
